--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.05.2022 08:47:22</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.05.2022 09:11:53</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Úterý, 24. 05. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Hrášková</strong>
+<strong>Kmínová se zeleninou a vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s grilovanými kuřecími křidélky a bagetkou</strong>
+<strong>Smažený Vepřový řízek s vařeným bramborem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
 						</span>
 </p>
 <p>
-<strong>Hovězí stroganov s rýží</strong>
+<strong>Milánské těstoviny s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							135,-
 						</span>
 </p>
 <p>
@@ -135,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenymi sladkymi baby paprikami a petrzelkovou tahini, zeleninovy kuskus, salatek {L} 149</li><li>Peceny filet z cerstve norske tresky s pecenymi sladkymi baby paprikami a petrzelkovou tahini, zeleninovy kuskus, salatek {L} 175</li><li>Thajske restovane veprove se zelenymi fazolkami, zazvorem, limetkou a cerstvym chilli, jasminova ryze, salatek 149</li><li>Grilovana kruti jatra s jablecno-zazvorovym catny, gratinovane brambory, salatek 169</li><li>Marocka tagina s pecenymi bataty, cizrnou, rajcaty a susenymi merunkami, zeleninovy kuskus, salatek {L} 149</li></ol>
+<ol><li>Smazeny filet z atlantickeho hejka, pecene brambory, tatarska omacka, salatek {L} 149</li><li>Ceviche z cerstve norske bile tresky se sladkokyselym sezamovo-limetkovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 175</li><li>Malajsky hovezi rendang s bramborami, ananasem, kokosovym mlekem a vonavym korenim, jasminova ryze, salatek 149</li><li>Burger s trhanou pecenou kanci pleci {rimsky salat, sriracha majoneza, marinovane redkvicky, jalapenos}, pecene brambory, salatek 175</li><li>Bramborove gnocchi s chrestem, gaj coj a modrym syrem, salatek {L} 149 </li></ol>
 </td>
 </tr>
 </table>
