--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.05.2022 08:47:27</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.05.2022 09:11:50</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 26. 05. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Fazolová</strong>
+<strong>Zeleninová s kari a kurkumou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřový pivní guláš s houskovým knedlíkem NEBO rýží</strong>
+<strong>Vepřové srbské rizoto se sýrem, okurkou NEBO řepou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
 						</span>
 </p>
 <p>
-<strong>Croque monsieur s trhaným salátkem a hranolkami</strong>
+<strong>Hovězí ,,POT AU FEU” s křenem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							139,-
 						</span>
 </p>
 <p>
@@ -135,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, sled, makrela, nilsky okoun}, kokosovym mlekem, gaj coj a zeleninou, jasminova ryze 149</li><li>Peceny filet z cerstveho norskeho lososa se svedskym dresinkem z celozrne horcice s koprem, stouchane brambory s porkem, salatek z cervene repy 175</li><li>Bengalske pikantni jalfrezi s krutimi prsicky, paprikami a zelenou cibulkou, jasminova ryze, salatek 149</li><li>Smazene rizecky z teleci kyty, stouchane brambory s porkem, salatek z cervene repy {L} 175</li><li>Maghrebska zapecena saksuka s vejci, cerstvymi rajcaty, paprikami a cerstvym ovcim syrem, pohanka se smazenou cibulkou, </li><li>salatek 149</li></ol>
+<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, sled, makrela, nilsky okoun}, kokosovym mlekem, gaj coj a zeleninou, jasminova ryze 149</li><li>Peceny filet z cerstveho norskeho lososa se svedskym dresinkem z celozrne horcice s koprem, stouchane brambory s porkem, salatek z cervene repy 175</li><li>Bengalske pikantni jalfrezi s krutimi prsicky, paprikami a zelenou cibulkou, jasminova ryze, salatek 149</li><li>Smazene rizecky z teleci kyty, stouchane brambory s porkem, salatek z cervene repy {L} 175</li><li>Maghrebska zapecena saksuka s vejci, cerstvymi rajcaty, paprikami a cerstvym ovcim syrem, pohanka se smazenou cibulkou 149</li></ol>
 </td>
 </tr>
 </table>
