--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.05.2022 08:16:19</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.05.2022 08:48:06</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -140,7 +140,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, sled, makrela, nilsky okoun}, kokosovym mlekem, gaj coj a zeleninou, jasminova ryze 149</li><li>Peceny filet z cerstveho norskeho lososa se svedskym dresinkem z celozrne horcice s koprem, stouchane brambory s porkem, salatek z cervene repy 175</li><li>Bengalske pikantni jalfrezi s krutimi prsicky, paprikami a zelenou cibulkou, jasminova ryze, salatek 149</li><li>Smazene rizecky z teleci kyty, stouchane brambory s porkem, salatek z cervene repy {L} 175</li><li>Maghrebska zapecena saksuka s vejci, cerstvymi rajcaty, paprikami a cerstvym ovcim syrem, pohanka se smazenou cibulkou 149</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se salsou z cerstvych rajcata a okurek, zeleninova ryze, salatek 149</li><li>Peceny filet z cersrtve norske tresky se salsou z cerstvych rajcat a okurek, zeleninova ryze, salatek 175</li><li>Opekane thajske veprove nudlicky s matou, zelenou cibulkou a arasidy, ryzove nudle, salatek 149</li><li>Grilovana koroptvi prsicka s merunkovym catny, gratinovane brambory, salatek 175</li><li>Pecene bataty a papriky zapecene s ementalem, jahly, jogurtovy dip, salatek 149</li></ol>
 </td>
 </tr>
 </table>
